--- a/index.html
+++ b/index.html
@@ -12,25 +12,38 @@
             }
         }
     </script>
+    <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script type="module" src="index.js"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        .under-area {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 20vh;
-            z-index: 100;
-        }
-    </style>
+    <script type="module" src="ui.js"></script>
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
-    <div class="under-area"></div>
+    <div class="app">
+    <aside class="sidebar" id="sidebar">
+        <div class="sidebar__header">
+        <strong>家具一覧</strong>
+        </div>
+        <div class="sidebar__list">
+        <div class="sidebar__item" draggable="true" data-model="chair">
+            <div class="sidebar__icon"></div>
+            <div class="sidebar__label">椅子</div>
+        </div>
+        <div class="sidebar__item" draggable="true" data-model="table">
+            <div class="sidebar__icon"></div>
+            <div class="sidebar__label">机</div>
+        </div>
+        <div class="sidebar__item" draggable="true" data-model="sofa">
+            <div class="sidebar__icon"></div>
+            <div class="sidebar__label">ソファ</div>
+        </div>
+        </div>
+    </aside>
+    
+    <main class="stage">
+        <button class="sidebar__toggle" id="toggle">☰ メニュー</button>
+        <canvas id="three-canvas"></canvas>
+        <div class="under-area"></div>
+    </main>
+    </div>
 </body>
 </html>
