--- a/index.html
+++ b/index.html
@@ -16,31 +16,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script type="module" src="index.js"></script>
     <script type="module" src="ui.js"></script>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 </head>
 <body>
     <div class="app">
     <aside class="sidebar" id="sidebar">
-        <div class="sidebar__header">
-        <strong>家具一覧</strong>
+        <div class="sidebar_header">
+            <strong>家具一覧</strong>
         </div>
-        <div class="sidebar__list">
-        <div class="sidebar__item" draggable="true" data-model="chair">
-            <div class="sidebar__icon"></div>
-            <div class="sidebar__label">椅子</div>
-        </div>
-        <div class="sidebar__item" draggable="true" data-model="table">
-            <div class="sidebar__icon"></div>
-            <div class="sidebar__label">机</div>
-        </div>
-        <div class="sidebar__item" draggable="true" data-model="sofa">
-            <div class="sidebar__icon"></div>
-            <div class="sidebar__label">ソファ</div>
-        </div>
+        <div class="sidebar_list">
         </div>
     </aside>
     
     <main class="stage">
-        <button class="sidebar__toggle" id="toggle">☰ メニュー</button>
+        <button class="sidebar_toggle" id="toggle">☰ メニュー</button>
         <canvas id="three-canvas"></canvas>
         <div class="under-area"></div>
     </main>
