サイドバーでのcanvas要素の配置の完了・縦スクロールは未完成

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </aside>
     
-    <main class="stage">
+    <main id="stage" class="stage">
         <button class="sidebar_toggle" id="toggle">☰ メニュー</button>
         <canvas id="three-canvas"></canvas>
         <div class="under-area"></div>
