--- a/index.html
+++ b/index.html
@@ -14,25 +14,33 @@
     </script>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="main.js"></script>
     <script type="module" src="ui.js"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 </head>
 <body>
     <div class="app">
-    <aside class="sidebar" id="sidebar">
-        <div class="sidebar_header">
-            <strong>家具一覧</strong>
-        </div>
-        <div class="sidebar_list">
-        </div>
-    </aside>
-    
-    <main id="stage" class="stage">
-        <button class="sidebar_toggle" id="toggle">☰ メニュー</button>
-        <canvas id="three-canvas"></canvas>
-        <div class="under-area"></div>
-    </main>
+        <aside class="sidebar" id="sidebar">
+            <div class="sidebar_header">
+                <strong>家具一覧</strong>
+            </div>
+            <div class="sidebar_list">
+            </div>
+        </aside>
+        
+        <main id="stage" class="stage">
+            <button class="sidebar_toggle" id="toggle">☰ メニュー</button>
+            <canvas id="three-canvas"></canvas>
+            <div class="under-area"></div>
+        </main>
+
+        <!-- <aside class="sidebar" id="sidebar">
+            <div class="sidebar_header">
+                <strong>部屋情報</strong>
+            </div>
+            <div class="sidebar_list">
+            </div>
+        </aside> -->
     </div>
 </body>
 </html>
